--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,5 +14,11 @@ jobs:
     - uses: actions/setup-python@v2
       with:
         python-version: '3.7'
+    - name: Install Dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install flake8 pytest
+        pip install -r requirements.txt
     - name: Test with pytest
-      run: pytest
+      run: |
+        pytest
