--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest
         pip install -r requirements.txt
+        python -c "import nltk; nltk.download('punkt')"
+        python -m spacy download en_core_web_sm
     - name: Test with pytest
       run: |
         pytest
