--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,10 +17,16 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
+        pip install flake8 pytest pytest-cov
         pip install -r requirements.txt
         python -c "import nltk; nltk.download('punkt')"
         python -m spacy download en_core_web_sm
     - name: Test with pytest
       run: |
-        pytest
+        pytest --cov=./ --cov-report=xml
+    - name: Upload Coverage to CodeCov
+      uses: codecov/codecov-action@v1
+      with:
+        token: ${{ secrets.CODECOV_SECRET }}
+        files: coverage.xml
+        verbose: true
