--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,8 +17,8 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest pytest-cov
-        pip install -r requirements.txt
+        pip install -r requirements/test-requirements.txt
+        pip install -r requirements/requirements.txt
         python -c "import nltk; nltk.download('punkt')"
         python -m spacy download en_core_web_sm
     - name: Test with pytest
@@ -30,3 +30,6 @@ jobs:
         token: ${{ secrets.CODECOV_SECRET }}
         files: coverage.xml
         verbose: true
+    - name: Bandit Security Check
+      run: |
+        bandit --exit-zero -r app/ tram.py server.py --exit-zero
