Pin and alphabetize requirements

--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,28 +1,28 @@
+aiohttp_security=0.4.0
+aiohttp_session=2.9.0
 aiohttp-jinja2==1.2.0
 aiohttp==3.6.2
-boto3
 beautifulsoup4==4.8.1
+boto3=1.16.59
+cryptography=3.3.1
+feedparser=6.0.2
+forestci==0.4.1
+htmldate=0.7.3
 jinja2==2.10.3
-networkx
+networkx=2.5
 nltk==3.4.5
-pyaml
-pytest-aiohttp
-stix2==1.2.1
-stix2-patterns==1.2.1
-taxii2-client==0.5.0
-Sphinx==3.4.3
-sphinx_rtd_theme==0.4.3
-recommonmark
-pyaml
-scikit-learn==0.23.1
 node2vec>=0.3.2
-tqdm
-spacy==2.2.4
-feedparser
-aiohttp_security
-aiohttp_session
-cryptography
+pandas=1.2.1
 pdfplumber==0.5.22
-forestci
-htmldate
-pandas
+pyaml=5.4.1
+pyaml=5.4.1
+pytest-aiohttp
+recommonmark=0.7.1
+scikit-learn==0.23.1
+spacy==2.2.4
+sphinx_rtd_theme==0.4.3
+Sphinx==3.4.3
+stix2-patterns==1.2.1
+stix2==1.2.1
+taxii2-client==0.5.0
+tqdm=4.56.0
