--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,27 +1,4 @@
-aiohttp_security==0.4.0
-aiohttp_session==2.9.0
-aiohttp-jinja2==1.2.0
-aiohttp==3.6.2
-beautifulsoup4==4.8.1
-boto3==1.16.59
-cryptography==3.3.1
-django==3.1.6
-feedparser==6.0.2
-forestci==0.4.1
-htmldate==0.7.3
-jinja2==2.10.3
-networkx==2.5
-nltk==3.4.5
-node2vec==0.4.1
-pandas==1.2.1
+django==3.1.7
+faker==6.5.0
 pdfplumber==0.5.27
-pyaml==20.4.0
-recommonmark==0.7.1
-scikit-learn==0.23.1
-spacy==2.2.4
-sphinx_rtd_theme==0.4.3
-Sphinx==3.4.3
-stix2-patterns==1.2.1
-stix2==1.2.1
-taxii2-client==0.5.0
-tqdm==4.56.0
+nltk==3.5
