--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,7 @@ jobs:
         verbose: true
     - name: Bandit Security Check
       run: |
-        bandit --exit-zero -r app/ tram.py server.py --exit-zero
+        bandit --exit-zero -r src/ --exit-zero
     - name: Safety Vulnerability Check
       run: |
         safety check --file requirements/requirements.txt
