--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
         pip install -r requirements/requirements.txt
     - name: Test with pytest
       run: |
-        pytest --cov=src/ --cov=src/tram --cov=src/tram/tram/ml --cov=src/tram/tram/management/commands --cov-report=xml
+        pytest --cov=src/ --cov=src/tram --cov=src/tram/tram/ml --cov=src/tram/tram/management/commands --cov-report=xml --flake8
     - name: Upload Coverage to CodeCov
       uses: codecov/codecov-action@v1
       with:
