--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,7 +19,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements/test-requirements.txt
         pip install -r requirements/requirements.txt
-    - name: Test with pytest
+    - name: Test and lint with pytest
       run: |
         pytest --cov=src/ --cov=src/tram --cov=src/tram/tram/ml --cov=src/tram/tram/management/commands --cov-report=xml --flake8
     - name: Upload Coverage to CodeCov
