WIP: Flake8, additional tests, updated UX (#13)
* Change pytest call to cover all source files

* Add flake8 checks

* Flake8 check

* Test flake8 failure

* More flake8

* More tests

* Install punkt

* Tests, add get_training_data

* Exclude None Mappings from training data

* Big update - roughed in UX

* django-rest-framework

* unpin drf because actions cant find it (why?)

* Fix flake and test errors

* Updated UX, get_training_data

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,9 +19,10 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements/test-requirements.txt
         pip install -r requirements/requirements.txt
-    - name: Test with pytest
+        python -c "import nltk; nltk.download('punkt')"
+    - name: Test and lint with pytest
       run: |
-        pytest --cov=src/ --cov-report=xml
+        pytest --cov=src/ --cov=src/tram --cov=src/tram/tram/ml --cov=src/tram/tram/management/commands --cov-report=xml --flake8
     - name: Upload Coverage to CodeCov
       uses: codecov/codecov-action@v1
       with:
