--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -5,6 +5,7 @@ faker==6.5.0
 pdfplumber==0.5.27
 python-docx==0.8.10
 nltk==3.5
+pandas==1.2.3
 sentence-transformers==0.4.1.2
 torch==1.8.0
 scikit-learn==0.24.1
