Add wordnet to CI

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,6 +20,7 @@ jobs:
         pip install -r requirements/test-requirements.txt
         pip install -r requirements/requirements.txt
         python -c "import nltk; nltk.download('punkt')"
+        python -c "import nltk; nltk.download('wordnet')"
     - name: Test and lint with pytest
       run: |
         pytest --cov=src/ --cov=src/tram --cov=src/tram/tram/ml --cov=src/tram/tram/management/commands --cov-report=xml --flake8
