--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,9 @@
 [tool:pytest]
 DJANGO_SETTINGS_MODULE = tram.settings
 python_paths = src/tram
+testpaths =
+    tests
+    src
 flake8-ignore = 
     src/archive/* ALL
     src/tram/tram/migrations/* ALL
