--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,23 +1,22 @@
-#
 # TRAM compose file. 
 #  - TRAM is currently setup to use Django with SQLite DB
 #  - TRAM currently only works from localhost on port 8000 (or whatever port you select here)
 #  - Any ML data and DB data is stored at the path stored in the environment variable 
 #    `DATA_DIRECTORY`. This is internal to Django.
+#  - SECRET_KEY is a URL Safe token and should be changed
 version: '3.5'
 services:
   tram:
-    # Update the image with the correct image name or ID
-    image: tram:latest
+    image: tram
     ports:
       - "8000:8000"
     environment:
       - DATA_DIRECTORY=/data
-      - SECRET_KEY=f8_0r69gev@%%e1^)39mi6m%l&j-zj_-5co*ryz7iy2gqt_b#x
+      - SECRET_KEY=Ij0WGee73k9OESwqddmSKCx6SY9aJ_7bDojs485Z6ec # your secret key here
       - DEBUG=True
       - DJANGO_SUPERUSER_USERNAME=djangoSuperuser
-      - DJANGO_SUPERUSER_PASSWORD=legitamatepassword
-      - DJANGO_SUPERUSER_EMAIL=legitemailaddress@legitgmail.com
+      - DJANGO_SUPERUSER_PASSWORD=LEGITPassword1234 # your password here
+      - DJANGO_SUPERUSER_EMAIL=LEGITSuperUser1234 # your email address here
     volumes:
       - tram-data:/data
 volumes:
