--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: test
+name: TRAM Tests
 
 on:
   push:
@@ -6,33 +6,25 @@ on:
   pull_request:
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
-
+    name: TRAM GitHub Action Tests
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-python@v2
-      with:
-        python-version: '3.9'
-    - name: Install Dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements/test-requirements.txt
-        pip install -r requirements/requirements.txt
-        python -c "import nltk; nltk.download('punkt')"
-        python -c "import nltk; nltk.download('wordnet')"
-    - name: Test and lint with pytest
-      run: |
-        pytest --cov=src/ --cov=src/tram --cov=src/tram/tram/ml --cov=src/tram/tram/management/commands --cov-report=xml --flake8
-    - name: Upload Coverage to CodeCov
-      uses: codecov/codecov-action@v1
-      with:
-        token: ${{ secrets.CODECOV_SECRET }}
-        files: coverage.xml
-        verbose: true
-    - name: Bandit Security Check
-      run: |
-        bandit -r src/ -ll -ii
-    - name: Safety Vulnerability Check
-      run: |
-        safety check --file requirements/requirements.txt
+      - uses: actions/checkout@v2
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.9'
+      - name: Install and update essential dependencies
+        run: |
+          pip install -U pip setuptools
+          pip install tox-gh-actions
+      - name: Run tests
+        run: |
+          tox
+      - name: Upload Coverage to Codecov
+        uses: codecov/codecov-action@v1
+        with:
+          token: ${{ secrets.CODECOV_SECRET }}
+          files: coverage.xml
+          verbose: true
