change exclude path

--- a/tox.ini
+++ b/tox.ini
@@ -36,9 +36,9 @@ commands =
 max-line-length = 120
 indent-size = 4
 max-complexity = 20
-ignore =
-    src/archive/* ALL
-    src/tram/tram/migrations/* ALL
+exclude =
+    src/archive
+    src/tram/tram/migrations
 
 [pytest]
 DJANGO_SETTINGS_MODULE = tram.settings
