specify which directories to test with flake8

--- a/tox.ini
+++ b/tox.ini
@@ -24,7 +24,7 @@ commands =
 [testenv:flake8]
 description = Flake8 Code Style Checks
 commands =
-    flake8
+    flake8 src/ tests/
 
 [testenv:safety]
 description = Safety Vulnerability Checks
