--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ deps =
 passenv = GITHUB_*
 
 [testenv:tram]
-description = Pytest Repository Code
+description = Run Pytest
 commands =
     python -c "import nltk; nltk.download('punkt')"
     python -c "import nltk; nltk.download('wordnet')"
@@ -30,7 +30,6 @@ commands =
 description = Safety Vulnerability Checks
 commands =
     safety check --file requirements/requirements.txt
-    safety check --file requirements/test-requirements.txt
 
 [flake8]
 max-line-length = 120
@@ -45,7 +44,6 @@ DJANGO_SETTINGS_MODULE = tram.settings
 python_paths = src/tram
 testpaths =
     tests
-    src
 
 [gh-actions]
 python =
