--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,9 @@ jobs:
     name: TRAM GitHub Action Tests
     steps:
     - uses: actions/checkout@v2
+      with:
+        # Disabling shallow clone is recommended for improving relevancy of reporting
+        fetch-depth: 0
     - name: Set up Python 3.9
       uses: actions/setup-python@v2
       with:
@@ -28,3 +31,15 @@ jobs:
         token: ${{ secrets.CODECOV_SECRET }}
         files: coverage.xml
         verbose: true
+    - name: SonarCloud Scan
+      uses: sonarsource/sonarcloud-github-action@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      with:
+        projectBaseDir: my-custom-directory
+        args: >
+          -Dsonar.organization=center-for-threat-informed-defense
+          -Dsonar.projectKey=center-for-threat-informed-defense_tram
+          -Dsonar.python.coverage.reportPaths=coverage.xml
+          -Dsonar.verbose=true
