--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -12,14 +12,11 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - DATA_DIRECTORY=/data
+      - DATA_DIRECTORY=/tram/data
       - ALLOWED_HOSTS=["example_host1", "localhost"] 
       - SECRET_KEY=Ij0WGee73k9OESwqddmSKCx6SY9aJ_7bDojs485Z6ec # your secret key here
       - DEBUG=True
       - DJANGO_SUPERUSER_USERNAME=djangoSuperuser
       - DJANGO_SUPERUSER_PASSWORD=LEGITPassword1234 # your password here
       - DJANGO_SUPERUSER_EMAIL=test@example.com # your email address here
-    volumes:
-      - tram-data:/data
-volumes:
-  tram-data:
+    
