--- a/tox.ini
+++ b/tox.ini
@@ -14,6 +14,7 @@ description = Run Pytest
 commands =
     python -c "import nltk; nltk.download('punkt')"
     python -c "import nltk; nltk.download('wordnet')"
+    python -c "import nltk; nltk.download('stopwords')"
     pytest --cov=src/ --cov=src/tram --cov=src/tram/tram/ml --cov=src/tram/tram/management/commands --cov-report=xml
 
 [testenv:bandit]
