fix: develop branch doesn't exist on this repo, update references to use master
* Update `docker-compose.yml` link in README to point to specific release within git (ties to specific release of file, and makes file location independent from repository structure and branch)
* Update references to `develop` branch in CONTRIBUTING.md guide to reference `master` as `develop` branch does not exist on this repo
* Update branch references in new CI lint check

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -10,8 +10,6 @@ name: Lint Code Base
 # Start the job on all push #
 #############################
 on:
-  push:
-    # branches-ignore: [main]
   pull_request:
     branches: [develop, master]
 
@@ -38,7 +36,7 @@ jobs:
         env:
           LINTER_RULES_PATH: /
           VALIDATE_ALL_CODEBASE: false
-          DEFAULT_BRANCH: develop
+          DEFAULT_BRANCH: master
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PYTHON_BLACK_CONFIG_FILE: "pyproject.toml"
           PYTHON_ISORT_CONFIG_FILE: "pyproject.toml"
