fix(build/dev): add flake8 exception for black
* add flake8 ignore of E203 (black and flake8 compat)
* remove references to `develop` branch
* remove redundant ignore settings
* bump django version in requirements to pass safety security check

--- a/tox.ini
+++ b/tox.ini
@@ -35,6 +35,7 @@ commands =
 max-line-length = 120
 indent-size = 4
 max-complexity = 20
+extend-ignore = E203
 exclude =
     src/archive
     src/tram/tram/migrations
