--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -11,7 +11,7 @@ name: Lint Code Base
 #############################
 on:
   pull_request:
-    branches: [develop, master]
+    branches: [master]
 
 ###############
 # Set the Job #
