--- a/.github/workflows/build-push-container.yml
+++ b/.github/workflows/build-push-container.yml
@@ -5,6 +5,7 @@ name: Publish Docker image on publish of release
 on:
   release:
     types: [published]
+  workflow_dispatch:
 
 jobs:
   push_to_registries:
