--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,19 +1,19 @@
-# TRAM compose file. 
+# TRAM compose file.
 #  - TRAM is currently setup to use Django with SQLite DB
 #  - TRAM currently only works from localhost on port 8000 (or whatever port you select here)
-#  - Any ML data and DB data is stored at the path stored in the environment variable 
+#  - Any ML data and DB data is stored at the path stored in the environment variable
 #    `DATA_DIRECTORY`. This is internal to Django.
 #  - ALLOWED_HOSTS is a list of hosts allowed to connect to the Django server (in settings.py)
 #  - SECRET_KEY is a URL Safe Token and should be changed
 version: '3.5'
 services:
   tram:
-    image: ctidorg/tram:latest
+    image: ghcr.io/center-for-threat-informed-defense/tram:latest
     ports:
       - "8000:8000"
     environment:
       - DATA_DIRECTORY=/tram/data
-      - ALLOWED_HOSTS=["example_host1", "localhost"] 
+      - ALLOWED_HOSTS=["example_host1", "localhost"]
       - SECRET_KEY=Ij0WGee73k9OESwqddmSKCx6SY9aJ_7bDojs485Z6ec # your secret key here
       - DEBUG=True
       - DJANGO_SUPERUSER_USERNAME=djangoSuperuser
@@ -22,4 +22,4 @@ services:
     volumes:
       - tram:/tram/data
 volumes:
-  tram:    
+  tram:
