--- a/.github/workflows/build-push-container.yml
+++ b/.github/workflows/build-push-container.yml
@@ -34,7 +34,7 @@ jobs:
             org.opencontainers.image.url=https://ctid.mitre-engenuity.org/our-work/tram/
 
       - name: Build and push Docker images
-        uses: docker/build-push-action@@v2
+        uses: docker/build-push-action@v2
         with:
           context: .
           push: true
