--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -4,8 +4,10 @@ django-picklefield==3.0.1
 django-rest-framework==0.1.0
 django==3.2.10
 faker==6.5.0
+gunicorn==20.1.0
 nltk==3.6.5
 pandas==1.2.3
 pdfplumber==0.5.27
 python-docx==0.8.10
 scikit-learn==0.24.1
+uvicorn==0.17.0
