chore(build): workaround to trigger pr container build for testing

--- a/.github/workflows/build-push-container.yml
+++ b/.github/workflows/build-push-container.yml
@@ -3,8 +3,11 @@
 name: Publish Docker image on publish of release
 
 on:
-  release:
-    types: [published]
+  pull_request:
+    branches:
+      - master
+#  release:
+#    types: [published]
 
 jobs:
   push_to_registries:
