--- a/.github/workflows/build-push-container.yml
+++ b/.github/workflows/build-push-container.yml
@@ -3,11 +3,8 @@
 name: Publish Docker image on publish of release
 
 on:
-  pull_request:
-    branches:
-      - master
-#  release:
-#    types: [published]
+ release:
+   types: [published]
 
 jobs:
   push_to_registries:
