--- a/docker/nginx-tram.conf
+++ b/docker/nginx-tram.conf
@@ -10,6 +10,7 @@ server {
         proxy_pass http://tramapp;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Proto $scheme;
         proxy_redirect off;
     }
 
