--- a/tox.ini
+++ b/tox.ini
@@ -12,9 +12,9 @@ passenv = GITHUB_*
 [testenv:tram]
 description = Run Pytest
 commands =
-    python3 -m nltk.downloader punkt
-    python3 -m nltk.downloader wordnet
-    python3 -m nltk.downloader omw-1.4
+    python -m nltk.downloader punkt
+    python -m nltk.downloader wordnet
+    python -m nltk.downloader omw-1.4
     pytest --cov=src/ --cov=src/tram --cov=src/tram/tram/ml --cov=src/tram/tram/management/commands --cov-report=xml
 
 [testenv:bandit]
