refactor(auth): Persist the SECRET_KEY
* Add django.key to .gitignore so nobody accidentally checks theirs in.
* Reconfigure code coverage to exclude settings.py and migrations.

--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,7 @@ commands =
     python -m nltk.downloader punkt
     python -m nltk.downloader wordnet
     python -m nltk.downloader omw-1.4
-    pytest --cov=src/ --cov=src/tram --cov=src/tram/tram/ml --cov=src/tram/tram/management/commands --cov-report=xml
+    pytest --cov=tram --cov-report=xml
 
 [testenv:bandit]
 description = Bandit Security Checks
