refactor(core) Make TRAM an installable package
This looks like a big commit, but its actually one main change and a
bunch of small changes to support that main change.

* add setup.cfg so that TRAM can be installed as a package. Now TRAM
  doesn't need to be manually added to PYTHONPATH, and also `python
  src/tram/manage.py` is now aliased to `tram` so you can do things like
  `tram runserver`.
* Update documentation and build artifacts to use `tram ...` shortcut
  instead of `python src/tram/manage.py ...`
* Move src/tram/tram/* to src/tram/*. This large rename causes the bulk
  of what you see in this commit, but I think its a cleaner layout, it's
  what developers will expect when they check out the project for the
  first time, and its a more natural fit for an installable package to be
  laid out this way.

--- a/tox.ini
+++ b/tox.ini
@@ -39,11 +39,10 @@ max-complexity = 20
 extend-ignore = E203
 exclude =
     src/archive
-    src/tram/tram/migrations
+    src/tram/migrations
 
 [pytest]
 DJANGO_SETTINGS_MODULE = tram.settings
-python_paths = src/tram
 testpaths =
     tests
 
