refactor(core) Make TRAM an installable package
* Using M3's suggestion to exclude migrations from super linter.

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -36,6 +36,7 @@ jobs:
         env:
           LINTER_RULES_PATH: /
           VALIDATE_ALL_CODEBASE: false
+          FILTER_REGEX_EXCLUDE: "src/tram/migrations/.*"
           DEFAULT_BRANCH: master
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PYTHON_FLAKE8_CONFIG_FILE: "tox.ini"
