refactor(core) Make TRAM an installable package (#155)
* refactor(core) Make TRAM an installable package

* add setup.cfg so that TRAM can be installed as a package. Now TRAM
  doesn't need to be manually added to PYTHONPATH, and also `python
  src/tram/manage.py` is now aliased to `tram` so you can do things like
  `tram runserver`.

* Update documentation and build artifacts to use `tram ...` shortcut
  instead of `python src/tram/manage.py ...`

* Move src/tram/tram/* to src/tram/*. This large rename causes the bulk
  of what you see in this commit, but I think its a cleaner layout, it's
  what developers will expect when they check out the project for the
  first time, and its a more natural fit for an installable package to be
  laid out this way.

* refactor(core) Make TRAM an installable package

* Fix Sonar Cloud warnings.

* Test/fix docker build.

* refactor(core) Make TRAM an installable package

* Fix Docker lint errors
* Attempt to fix the black/flake8 lint errors that occur only in CI and
  not in local. The linters should be ignoring migrations.

* refactor(core) Make TRAM an installable package

* Using M3's suggestion to exclude migrations from super linter.

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -36,8 +36,10 @@ jobs:
         env:
           LINTER_RULES_PATH: /
           VALIDATE_ALL_CODEBASE: false
+          FILTER_REGEX_EXCLUDE: "src/tram/migrations/.*"
           DEFAULT_BRANCH: master
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PYTHON_FLAKE8_CONFIG_FILE: "tox.ini"
           PYTHON_BLACK_CONFIG_FILE: "pyproject.toml"
           PYTHON_ISORT_CONFIG_FILE: "pyproject.toml"
           SHELLCHECK_OPTS: "-e SC2016 -e SC2086 -e SC2129"
