Increase maximum file size in nginx conf (#157)
The default max file size is 2.5MB and several people requested for this
limit to be raised.

--- a/docker/nginx-tram.conf
+++ b/docker/nginx-tram.conf
@@ -5,6 +5,7 @@ upstream tramapp {
 
 server {
     listen 80;
+    client_max_body_size 100M;
 
     location / {
         proxy_pass http://tramapp;
