Update TRAM packaging.
It seems that an update to setuptools has broken our ability to package
TRAM, e.g. running the docker build results in "“No module named 'tram'”
errors. Upon investigation, setuptools was creating all of the install
metadata for the package (including the `tram` executable) but not
actually installing the tram package. My fix is to require
setuptools>=61 and move the setup.cfg contents to pyproject.toml. This
is fixing the docker build in my testing.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,19 @@
 [build-system]
 requires = [
-  "setuptools>=42",
+  "setuptools>=61",
   "wheel"
 ]
+build-backend = "setuptools.build_meta"
+
+[project]
+name = "tram"
+version = "1.2.0"
+description = "Threat Report ATT&CK Mapping (TRAM) is an open-source platform designed to advance research into automating the mapping of cyber threat intelligence reports to MITRE ATT&CK®."
+readme = "README.md"
+requires-python = ">=3.8"
+
+[project.scripts]
+tram = "tram.manage:main"
 
 [tool.black]
 exclude = '''
