--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -9,10 +9,10 @@
 version: '3.5'
 services:
   tram:
-    image: ghcr.io/center-for-threat-informed-defense/tram:latest
+    image: ghcr.io/ankit-safe/tram:latest
     environment:
       - DATA_DIRECTORY=/tram/data
-      - ALLOWED_HOSTS=["example_host1", "localhost"]
+      - ALLOWED_HOSTS=["*"]
       - DJANGO_SUPERUSER_USERNAME=djangoSuperuser
       - DJANGO_SUPERUSER_PASSWORD=LEGITPassword1234 # your password here
       - DJANGO_SUPERUSER_EMAIL=test@example.com # your email address here
