--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -7,7 +7,11 @@ django==3.2.16
 faker==6.5.0
 gunicorn==20.1.0
 nltk==3.6.7
-pandas==1.2.3
+wheel==0.37.1
+cmake==3.24.1.1
+numpy==1.21.4
+pandas==1.2.5
 pdfplumber==0.6.0
 python-docx==0.8.10
 scikit-learn==1.0.2
+requests==2.28.1
