--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,16 +1,16 @@
 beautifulsoup4==4.12.2
 django-constance==2.9.1
 django-picklefield==3.1
-django-rest-framework~=0.1.0
+djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
-django==3.2.19
+django==3.2.20
 faker==6.5.0
 gunicorn==20.1.0
 nltk==3.8.1
 pandas==2.0.2
 pdfplumber==0.9.0
 python-docx==0.8.11
-requests==2.27.1
+requests==2.31.0
 scikit-learn==1.2.2
 torch==2.0.1
 transformers[torch]==4.30.2
