--- a/.github/workflows/build-push-container.yml
+++ b/.github/workflows/build-push-container.yml
@@ -3,9 +3,10 @@
 name: Publish Docker image on publish of release
 
 on:
-  release:
-    types: [published]
-  workflow_dispatch:
+  push:
+    branches: [main]
+    tags:
+      - "v*"
 
 jobs:
   push_to_registries:
