--- a/.github/workflows/build-push-container.yml
+++ b/.github/workflows/build-push-container.yml
@@ -1,6 +1,6 @@
 # Will automatically build and push new docker image on release
 
-name: Publish Docker image on publish of release
+name: Publish Docker image
 
 on:
   push:
@@ -10,7 +10,7 @@ on:
 
 jobs:
   push_to_registries:
-    name: Push Docker image to multiple registries if necessary
+    name: Build and push images
     runs-on: ubuntu-latest
     permissions:
       packages: write
