Try again to fix the safety check in tox
Commenting out doesn't actually stop tox from creating that environment.
Seems far easier just to run all the checks in a single venv, so that
what's I've done in this commit.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = tram, bandit, flake8, safety
+envlist = tram
 skipsdist = True
 
 [testenv]
@@ -10,28 +10,15 @@ deps =
 passenv = GITHUB_*
 
 [testenv:tram]
-description = Run Pytest
+description = Run Checks
 commands =
     python -c "import nltk; nltk.download('punkt')"
     python -c "import nltk; nltk.download('wordnet')"
     python -c "import nltk; nltk.download('omw-1.4')"
     pytest --cov=tram --cov-report=xml
-
-[testenv:bandit]
-description = Bandit Security Checks
-commands =
     bandit -r src/ -ll -ii
-
-[testenv:flake8]
-description = Flake8 Code Style Checks
-commands =
     flake8 src/ tests/
-
-; The GitHub runner doesn't have enough disk space to run this check.
-; [testenv:safety]
-; description = Safety Vulnerability Checks
-; commands =
-;     safety check --file requirements/requirements.txt
+    safety check --file requirements/requirements.txt
 
 [flake8]
 max-line-length = 120
