--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -4,9 +4,10 @@ django-picklefield==3.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 django==3.2.20
-faker==6.5.0
+faker==15.3.4
 gunicorn==20.1.0
 nltk==3.8.1
+numpy==1.24.4
 pandas==2.0.2
 pdfplumber==0.9.0
 python-docx==0.8.11
