--- a/docker/Dockerfile.nginx
+++ b/docker/Dockerfile.nginx
@@ -2,7 +2,7 @@ FROM nginx:1.21.5-alpine
 
 # OCI labels
 LABEL "org.opencontainers.image.title"="TRAM"
-LABEL "org.opencontainers.image.url"="https://ctid.mitre-engenuity.org/our-work/tram/"
+LABEL "org.opencontainers.image.url"="https://ctid.mitre.org/our-work/tram/"
 LABEL "org.opencontainers.image.source"="https://github.com/center-for-threat-informed-defense/tram"
 LABEL "org.opencontainers.image.description"="Threat Report ATT&CK Mapper - Nginx Component"
 
